--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@arco-design/web-react": "^2.53.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.6",
     "@types/scrollreveal": "^0.0.11",
     "axios": "^1.5.1",
