--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.6",
     "@types/scrollreveal": "^0.0.11",
     "axios": "^1.5.1",
+    "jinrishici": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
